# aic2025-taga-v5.8

./: .gitignore  Dockerfile  README.md  docker_build.sh  docker_run.sh  packages.txt  requirements.txt
.github/workflows/: colcon-build-test.yaml
aichallenge/: Makefile  publish.bash  publish_initialpose.py  record_rosbag.bash  run_autoware.bash  run_evaluation.bash  run_rviz.bash  run_simulator.bash  topic_check.sh
aichallenge/workspace/src/aichallenge_submit/: .gitignore
aichallenge/workspace/src/aichallenge_submit/aichallenge_submit_launch/: package.xml
aichallenge/workspace/src/aichallenge_submit/aichallenge_submit_launch/launch/: aichallenge_submit.launch.xml  reference.launch.xml  reference.launch.xml.backup
aichallenge/workspace/src/aichallenge_submit/aichallenge_submit_launch/map/: lanelet2_map.osm  wide_lanelet2_map.osm
aichallenge/workspace/src/aichallenge_submit/gnss_filter/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/gnss_filter/config/: gnss_filter.param.yaml
aichallenge/workspace/src/aichallenge_submit/gnss_filter/include/gnss_filter/: gnss_filter_core.hpp
aichallenge/workspace/src/aichallenge_submit/gnss_filter/launch/: gnss_filter.launch.xml
aichallenge/workspace/src/aichallenge_submit/gnss_filter/src/: gnss_filter_core.cpp
aichallenge/workspace/src/aichallenge_submit/goal_checker/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/goal_checker/src/: goal_line_checker_node.cpp
aichallenge/workspace/src/aichallenge_submit/goal_pose_setter/src/: goal_pose_setter_node.cpp  goal_pose_setter_node.hpp
aichallenge/workspace/src/aichallenge_submit/imu_corrector/config/: imu_corrector.param.yaml
aichallenge/workspace/src/aichallenge_submit/imu_filter/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/imu_filter/config/: imu_filter.param.yaml
aichallenge/workspace/src/aichallenge_submit/imu_filter/include/imu_filter/: imu_filter_core.hpp
aichallenge/workspace/src/aichallenge_submit/imu_filter/launch/: imu_filter.launch.xml
aichallenge/workspace/src/aichallenge_submit/imu_filter/src/: imu_filter_core.cpp
aichallenge/workspace/src/aichallenge_submit/imu_gnss_poser/src/: imu_gnss_poser_node.cpp
aichallenge/workspace/src/aichallenge_submit/racing_kart_gnss_poser/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/racing_kart_gnss_poser/include/gnss_poser/: convert.hpp  gnss_poser_core.hpp  gnss_stat.hpp
aichallenge/workspace/src/aichallenge_submit/racing_kart_gnss_poser/launch/: gnss_poser.launch.xml
aichallenge/workspace/src/aichallenge_submit/racing_kart_gnss_poser/src/: gnss_poser_core.cpp
aichallenge/workspace/src/aichallenge_submit/simple_pure_pursuit/include/simple_pure_pursuit/: simple_pure_pursuit.hpp  simple_pure_pursuit.hpp.backup
aichallenge/workspace/src/aichallenge_submit/simple_pure_pursuit/src/: simple_pure_pursuit.cpp  simple_pure_pursuit.cpp.backup
aichallenge/workspace/src/aichallenge_submit/simple_trajectory_generator/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/simple_trajectory_generator/data/: raceline_awsim_15km.csv  raceline_awsim_30km.csv  raceline_awsim_30km_from_garage.csv  raceline_cctb_30km.csv  raceline_cctb_30km_wide.csv  raceline_cctb_30km_wide_from_garage.csv  raceline_cctb_30km_wide_from_garage_yutori.csv
aichallenge/workspace/src/aichallenge_submit/simple_trajectory_generator/src/: simple_trajectory_generator.cpp
aichallenge/workspace/src/aichallenge_system/aichallenge_awsim_adapter/: CMakeLists.txt
aichallenge/workspace/src/aichallenge_system/aichallenge_awsim_adapter/launch/: aichallenge_awsim_adapter.launch.xml
aichallenge/workspace/src/aichallenge_system/aichallenge_system_launch/config/: autoware.rviz  autoware_vehicle.rviz
aichallenge/workspace/src/aichallenge_system/aichallenge_system_launch/launch/: aichallenge_system.launch.xml
aichallenge/workspace/src/aichallenge_system/aichallenge_system_launch/launch/mode/: remote.launch.xml
aichallenge/workspace/src/aichallenge_system/autoware_overlay_rviz_plugin/: CHANGELOG.rst
aichallenge/workspace/src/aichallenge_system/script/: motion_analytics.py  result-converter.py
remote/: connect_ssh.bash  connect_zenoh.bash  joy.bash  zenoh-user.json5
remote/detail/: scan_ip_addr.py
vehicle/: .env.example  Makefile  Readme.md  docker-compose.yml  download_submission.py  download_submission.sh  record_rosbag.bash  setup_check.md  setup_check.sh  zenoh.json5
